--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@
     --backGround-main-section: rgba(99, 120, 241, 0.842);
 }
 
+body {
+    overflow: hidden;
+    background-color: rgb(53, 52, 52);
+}
+
 .header-content {
     display: flex;
     width: 100%;
@@ -21,110 +26,66 @@
     text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.644);
 }
 
-.main-title {
-    color: rgb(233, 235, 236);
-    font-size: 2.4rem;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.material-symbols-outlined {
-    font-size: 2.6rem;
-}
-
 .main-section {
-    width: 100%;
-    height: calc(100vh - 12.56rem);
-    display: flex;
-    align-items: center;
     background-color: var(--backGround-main-section);
-}
-
-.main-section-form {
-    margin: 0 auto;
+    width: 100%;
+    height: calc(100vh - 12.5rem);
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    gap: 1rem;
 }
 
-.main-section-label {
-    font-size: 1.6rem;
-    font-weight: bold;
+.main-title {
     color: white;
-    text-shadow: 4px 4px 10px darkblue;
+    font-size: 2.4rem;
+    font-weight: bolder;
     text-transform: uppercase;
-    position: relative;
 }
 
-.state-city {
-    display: grid;
-    grid-row: auto auto;
-    gap: 0.5rem;
-    justify-content: center;
-}
-
-.btn-choose {
-    font-size: 1.6rem;
-    max-width: max-content;
-    padding: 0.2rem;
-    grid-row-start: 2;
-    border-radius: 3px;
-    outline: 1px solid rgb(168, 161, 161);
-    border: none;
-}
-
-.main-section-form-state-label{
-    display: inline-block;
-    padding: 0.4rem 1rem;
-    text-transform: capitalize;
-}
-
-.main-section-form-state-label input{
-    margin-left: 0.5rem;
-}
-
-.btn-choose::placeholder {
-    color: rgba(0, 0, 0, 0.219);
-}
-
-.btn-send-options {
-    max-width: min-content;
-    padding: 0.5rem 2rem;
-    grid-row-start: 2;
-    grid-column-start: 2;
-    background-color: rgba(5, 233, 5, 0.767);
-    font-weight: bold;
-    border-radius: 3px;
-}
-
-.main-section-label {
-    padding: 1.3rem 0;
-}
-
-.section-form-radio {
+.main-section-case-options {
     display: flex;
-    margin: 0 auto;
-    background-color: rgba(138, 135, 135, 0.651);
-    color: aliceblue;
-    width: max-content;
     flex-direction: column;
     align-items: center;
-    gap: 0.5rem;
-    border-radius: 0.5rem;
+    width: 40%;
+    max-width: 30rem;
+    gap: 0.2rem;
 }
 
-.CTA{
-    padding: 1rem;
-    font-size: 1.5rem;
+.case-options-label-city {
+    font-size: 2rem;
+    text-transform: capitalize;
+    color: rgb(226, 226, 226);
     font-weight: bold;
+    padding: 1rem 0;
 }
 
-.hidden{
-    display: none;
+.case-options-input-city {
+    padding: 0.5rem;
+    max-width: min-content;
+    margin-bottom: 1.5rem;
+    font-size: 1.5rem;
+    border-radius: 0.3rem;
+    outline: none;
+    border: none;
+    border-bottom: solid 0.1rem black;
 }
 
-.footer-content{
+.case-options-input-city::placeholder{
+    color: rgba(0, 0, 0, 0.267);
+    font-size: 1.3rem;
+}
+
+.btn-send{
+    padding: 0.5rem;
+    width: 7rem;
+    font-weight: bold;
+    font-size: 1.5rem;
+    background-color: rgb(22, 199, 22);
+    border: black solid 0.1rem;
+    border-radius: 0.3rem;
+}
+
+.footer-content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -133,26 +94,26 @@
     border-top: 1px solid white;
     color: white;
     padding: 0.4rem;
-
 }
 
-.linkedin a{
+.linkedin a {
     color: rgb(116, 116, 250);
 }
 
-.gitHub a{
+.gitHub a {
     color: rgb(212, 60, 60);
 }
 
-.name-dev a{
+.name-dev a {
     color: chartreuse;
 }
 
-a, a::selection{
+a,
+a::selection {
     color: white;
     text-decoration: none;
 }
 
-.footer-content a:hover{
+.footer-content a:hover {
     text-decoration: underline;
 }
