--- a/css/style.css
+++ b/css/style.css
@@ -88,10 +88,11 @@ body {
 
 .disabled {
     cursor: not-allowed;
+    opacity: 0.5;
     position: relative;
 }
 
-.disabled::after{
+.disabled::after {
     content: "";
     opacity: 0;
     left: 50%;
@@ -107,11 +108,10 @@ body {
 
 .disabled:hover.disabled::after {
     content: "Coloque a sua cidade";
-    transition: all 650ms 0ms cubic-bezier(.57,-0.78,.4,1.73) ;
+    transition: all 650ms 0ms cubic-bezier(.57, -0.78, .4, 1.73);
     font-size: 1.4rem;
     opacity: 1;
     width: 20ch;
-    
 }
 
 .footer-content {
