--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
     gap: 0.2rem;
 }
 
-.case-options-label-city {
+.case-options-label {
     font-size: 2rem;
     text-transform: capitalize;
     color: rgb(226, 226, 226);
@@ -59,7 +59,7 @@ body {
     padding: 1rem 0;
 }
 
-.case-options-input-city {
+.case-options-input {
     padding: 0.5rem;
     max-width: min-content;
     margin-bottom: 1.5rem;
@@ -70,14 +70,13 @@ body {
     border-bottom: solid 0.1rem black;
 }
 
-.case-options-input-city::placeholder {
+.case-options-input::placeholder {
     color: rgba(0, 0, 0, 0.267);
     font-size: 1.3rem;
 }
 
 .btn-send {
     padding: 0.5rem;
-    width: 7rem;
     font-weight: bold;
     font-size: 1.5rem;
     background-color: rgb(22, 199, 22);
@@ -107,6 +106,34 @@ body {
 }
 
 .disabled:hover.disabled::after {
+    content: "Coloque o seu estado";
+    transition: all 650ms 0ms cubic-bezier(.57, -0.78, .4, 1.73);
+    font-size: 1.4rem;
+    opacity: 1;
+    width: 20ch;
+}
+
+.disabled-city{
+    cursor: not-allowed;
+    opacity: 0.5;
+    position: relative;
+}
+
+.disabled-city::after {
+    content: "";
+    opacity: 0;
+    left: 50%;
+    bottom: 0;
+    width: 0;
+    font-size: 0;
+    background-color: rgba(53, 52, 52, 0.5);
+    color: rgba(240, 248, 255, 0.575);
+    position: absolute;
+    transform: translate(-50%, 100%);
+    border-radius: 0.3rem;
+}
+
+.disabled-city:hover.disabled-city::after {
     content: "Coloque a sua cidade";
     transition: all 650ms 0ms cubic-bezier(.57, -0.78, .4, 1.73);
     font-size: 1.4rem;
@@ -145,4 +172,8 @@ a::selection {
 
 .footer-content a:hover {
     text-decoration: underline;
+}
+
+.hidden{
+    display: none;
 }
